--- a/docs/rfc/rfc-6-group-expiration-minimal-specification.adoc
+++ b/docs/rfc/rfc-6-group-expiration-minimal-specification.adoc
@@ -8,15 +8,14 @@ toc::[]
 
 == Proposal
 This document focuses on specifying a group expiration mechanism. The proposed
-functionality enables a group to expire after particular conditions are met.
+functionality enables a group to expire after particular condition is met.
 Members of an expired group are forbidden from taking any new actions within the
-group,but all of the already ongoing in-group operations can still continue. 
+group, but all of the already ongoing in-group operations can still continue. 
 
 === Goal
 The goal is to provide a minimal set of functions necessary for implementing the
 group expiration mechanism into the KEEP network. The group expires when group
-expiration timeout passes or when the number of active members falls below a
-threshold.
+expiration timeout passes.
 
 == Specification
 
@@ -27,14 +26,6 @@ formation agreement):
 
 - group formation agreement identifier,
 - group members identifiers,
-- group size, number of the members, (we can have it explicitly here or always
-calculated)
-- group members statuses, indicating which member is active, inactive or
-misbehaving,
-- group threshold, a minimal number of active users required for the group to
-still be active, this might be a different value than the system constant
-group threshold for adding an additional overhead in case of a failure, (we can
-have it explicitly here or always calculated)
 - the initiation time when the group was created,
 - timeout, after which the group expires,
 - current state indicating if the group is active or expired.
@@ -51,9 +42,6 @@ with:
 
 - unique group formation agreement identifier,
 - group members identifiers,
-- group size set to the number of the members, (explicit or implicit)
-- group members statuses set to _active_,
-- group threshold set accordingly to the group size, (explicit or calculated)
 - initiation time set to current block time,
 - timeout set to an arbitrary time to group expiration counted in blocks,
 - current agreement state set to _active_.
@@ -71,42 +59,24 @@ otherwise, the
 
 [#active]
 ===== Active group response
-The group selection contract sends the following information to the operating
-contract:
-
-- group size,
-- group members identifiers,
-- group members statuses.
+The group selection contract sends _group members identifiers_ to the operating
+contract.
 
 The operating contract is obligated to forbid non-members from group operations.
-The operating contract is free to filter out inactive or misbehaving members.
-
-At the end of the operation the operating contract is obligated to perform a
-<<update, group contract members status update>> in case the status of at least
-one of the group members have changed.
 
 [#expired]
 ===== Expired group response
 The group selection contract sends _expired_ group status to the operating
 contract. The operating contract should not commence any new operation. It
-should inform its invoker or group of invokers about the fact that the group expired.
+should inform its invoker or group of invokers about the fact that the group
+expired.
 
 [#verification]
 ===== Group agreement status verification
-1. If the current block time is larger than the group initiation time plus the
+If the current block time is larger than the group initiation time plus the
 threshold then set the group agreement status to _expired_.
-2. If the number of members with _active_ status is smaller than the group
-threshold then set the group agreement status to _expired_.
-
-[#update]
-===== Post-operation members status update
-If at least one group member status changed during an operation the operating
-contract is obligated to call into the group selection contract upon completion
-of its operation to updated list of group agreement members statuses indicating
-which member was active, inactive or misbehaving during the execution of the
-operating contract. The group selection contract updates the members' statuses
-of appropriate group formation agreement.
 
 [bibliography]
 == Related Links
 - https://docs.keep.network/random-beacon/group-expiration/
+- https://www.flowdock.com/app/cardforcoin/keep/threads/NL6VK7goghV9QaWUXyFT_YgwV_M
