--- a/simulations/master_simulation/master_simulation.ipynb
+++ b/simulations/master_simulation/master_simulation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -64,7 +66,7 @@
        "Text(0.5, 1.0, 'Virtual Staker Cumulative Distribution')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,20 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[False False False ...  True False False]\n",
-      " [ True  True False ... False False False]]\n"
+      "[[False  True False ... False False False]\n",
+      " [False False False ... False False False]\n",
+      " [False False False ... False False False]\n",
+      " ...\n",
+      " [ True False False ... False False False]\n",
+      " [False  True False ... False False False]\n",
+      " [False False False ...  True False False]]\n"
      ]
     }
    ],
    "source": [
-    "print(failed_nodes[1:3])"
+    "print(failed_nodes)"
    ]
   },
   {
@@ -1995,9 +2002,11 @@
     }
    ],
    "source": [
-    "v = simpy.Environment()\n",
+    "env = simpy.Environment()\n",
     "print(\"creating nodes\")\n",
-    "node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10)\n",
+    "group_counter = group_increment(env, group_members)\n",
+    "\n",
+    "node_array = [sc.Node(env, 'Node %d' % i, datetime.datetime.now(), 10, group_counter)\n",
     "            for i in range(nodes)] #number of nodes\n",
     "env.run()\n",
     "\n",
